# Aiden

./: DOCUMENTATION.md  README.md  USER_GUIDE.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  code.py  openai_agent.py  shell.py
backend/app/core/: config.py
backend/app/services/: code_service.py  github_service.py  openai_agent_service.py  shell_service.py
backend/devin_backend/: .env  .env.example  pyproject.toml
backend/devin_backend/app/: main.py  models.py
backend/devin_backend/app/api/: __init__.py  browser.py  github.py
backend/devin_backend/app/core/: config.py
backend/devin_backend/app/services/: browser_service.py
browser_integration/: README.md
frontend/: index.html  package.json
frontend/devin_frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js
frontend/devin_frontend/src/: App.tsx  index.css
frontend/devin_frontend/src/api/: index.ts
frontend/devin_frontend/src/components/: AppContent.tsx  ChatInterface.tsx  ChatMessage.tsx  CodeWorkspace.tsx  SplitPaneLayout.tsx
frontend/devin_frontend/src/contexts/: AuthContext.tsx
frontend/devin_frontend/src/lib/: supabase.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: AppContent.tsx  Auth.tsx  ChatMessage.tsx  CodeWorkspace.tsx  SplitPaneLayout.tsx  TaskProgress.tsx  TaskTab.tsx
frontend/src/components/ui/: code-block.tsx  (+1 more)
frontend/src/hooks/: use-swipe.tsx
frontend/src/types/: index.ts
github_integration/: README.md
shell_integration/: README.md
(+1 files in other folders)
