[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}
psycopg = {extras = ["binary"], version = "^3.2.6"}
python-dotenv = "^1.0.1"
langchain = "^0.3.20"
openai = "^1.66.3"
pydantic-settings = "^2.8.1"
anthropic = "^0.49.0"
browser-use = "^0.1.40"
playwright = "^1.49.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
